# minimal-federated-computing

./: Cargo.toml  README.md  dist-workspace.toml
proto/: route_guide.proto
src/: client.rs  computation.rs  server.rs
