[package]
name = "routeguide"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "routeguide-server"
path = "src/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

pyo3 = { version = "0.22", features = ["auto-initialize"] }
numpy = "0.22"

[build-dependencies]
tonic-build = "*"

