[package]
name = "minimal-federated-computing"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/MisterBourbaki/minimal-federated-computing"
readme = "README.md"
description = "This is a minimal(ist) Federated computing framework"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mfc-server"
path = "src/server.rs"

[[bin]]
name = "mfc-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

pyo3 = { version = "0.23", features = ["auto-initialize"] }
numpy = "0.23"
component = "0.1.1"
fmt = "0.1.0"
clippy = "0.0.302"
clap = { version = "4.5.21", features = ["derive"] }

[build-dependencies]
tonic-build = "*"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

